<resources>
    <string name="app_name">Security</string>
    <string name="done">Done</string>
    <string name="choose_language">Choose Your Language</string>
    <string name="change_language">Change Language</string>
    <string name="addimage">Add Image</string>
    <string name="entername">Enter Name</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enterphone">Enter Phone Number</string>

</resources>
